--- a/latex_thesis/effects_gw/ef_gw.tex
+++ b/latex_thesis/effects_gw/ef_gw.tex
@@ -127,7 +127,11 @@ S^{1} =   \cos \theta + \dfrac{1}{2} \sin \theta A^{\T} _{12} \cos (\omega t) \\
 S^{2} = \sin \theta  +  \dfrac{1}{2}  \cos \theta A^{\T} _{12} \cos (\omega t)
 \eea
 where $h_{\times} = A^{\T} _{12} \cos (\omega t)$ for a plane wave. 
-The relationship between these solutions and those for $h_{+} \neq 0$ can be easily found if we rotate the axes through an angles of $-\pi / 4 $
+The relationship between these solutions and those for $h_{+} \neq 0$ can be easily found if we consider an angle of $\theta = \pi / 4 $, therefore we obtain
+In this case the circle of particles bounce back and forth in the shape of 
+
+
+
 
 
 \begin{figure}
