--- a/latex_thesis/effects_gw/ef_gw.tex
+++ b/latex_thesis/effects_gw/ef_gw.tex
@@ -1,8 +1,9 @@
 We have shown how the gravitational waves are obtained from the Einstein's field equation. 
 By using the transverse traceless gauge we introduced crucial semplifications. 
 We want now to explain the important physical consequences of the theoretical results obtained in the previous part.
-Throughout the next sections we will use the linearized theory of gravitatinal waves and we consider our metric to be in the TT Gauge.
-\subsection{Free particles}
+Throughout the next sections we will use the linearized theory of gravitatinal waves and we consider our metric to be in the TT gauge.
+%%in the second section we giva a coordinate-independent measure of the gravitational wave effects.
+\subsection{Free particles and detetction principles}
 In general relativity the trajectory of a free falling particle is described by the \textbf{geodesic equation}
 \begin{equation}
 \label{geodesic_eq}
@@ -61,11 +62,13 @@ L \approx  L_c \qty(1 - \dfrac{1}{2} h_{+} (t,z=0))
 \]
 Therefore, recalling the expression of the plus polarization for a plane wave 
 $$h_{+} =  A^{\T} _{11} \cos \qty(\omega(t-z))$$ we notice that the particles along x axis are streched, whereas the particles along the y axis are squeezed. 
-This is one of the features of the plus polarization, that we will thoroughly analyze in the next section.
+This is one of the features of the plus polarization, that we will thoroughly analyze in the next section.\\
 
+ADD DETECTION PRINCIPLES
 
-\subsection{Geodesic deviation of test particles}
-The \textbf{geodesic deviation equation} expresses the relative acceleration between two neighboring geodesics belonging to a one-parameter geodesics $\gamma_s (\tau)$:
+\subsection{From the geodesic deviation equation to the $+$ and $\times$ polarizations}
+Since free-falling bodies obey to the geodesic equation(\ref{geodesic_eq}), in this section we study the physical effects of the two polarizations plus $+$ and times $\times$ of the gravitational waves through relative motions of geodesics.\\
+The \textbf{geodesic deviation equation}  expresses the relative acceleration between two neighboring geodesics belonging to a one-parameter geodesics $\gamma_s (\tau)$:
 \begin{equation}
 \label{geudesic_deviation_eq}
 \dfrac{D^2}{d \tau ^2} S^{\mu} = :R^{\mu} _{\nu \rho \sigma}: \, T^{\nu} T^{\rho} S^{\sigma}
@@ -75,39 +78,19 @@ The \textbf{geodesic deviation equation} expresses the relative acceleration bet
 \dfrac{D}{d \tau} = \dv{x^{\mu}}{\tau} \, \nabla_{\mu}
 \]
 A non-zero acceleration of the deviation bewteen between neighbouring geodesics is a signature of spacetime curvature.
-In fact, geodesic deviation cannot distinguish between a zero gravitational field and a uniform grabitational field. Only tidal gravitational fields give rise to an acceleration in the geodesic deviation.
-The geodesic deviation describes the relative motions of free falling objects and it will show a coordinate-independent measure of the gravitational wave effects. \\
+In fact, geodesic deviation cannot distinguish between a zero gravitational field and a uniform grabitational field. Only tidal gravitational fields give rise to an acceleration in the geodesic deviation. \\
 Let us consider some nearby particles with four-velocities described by a single vector field $u^{\mu}$ and separation vector field $S^{\mu}$, the geodesic deviation equation(\ref{geudesic_deviation_eq}) becomes
 \begin{equation}
 \dfrac{D^2}{d \tau ^2} S^{\mu} = :R^{\mu} _{\nu \rho \sigma}: \, u^{\nu} u^{\rho} S^{\sigma}
 \end{equation}
-The four-velocity vector can be approximated with a unit vector in the time direction plus corrections of order $h^{\T} _{\mu \nu}$ and higher, however the Reimann curvature tensor is already first order. Therefore, we ignore the corrections of the four-velocity vector and we write $u^{\nu} =(1,0,0,0)$.\\
-Since we have already calculated the Riemann curvature tensor in equation(\ref{reimann_curvature_tensor_first_order}) we recall the result taking into account the TT gauge conditions
+The four-velocity vector can be approximated with a unit vector in the time direction plus corrections of order $h^{\T} _{\mu \nu}$ and higher, however the Reimann curvature tensor is already first order. Therefore, we ignore the corrections of the four-velocity vector and we approximate $u^{\nu} =(1,0,0,0)$.\\
+Since we have already calculated the Riemann curvature tensor in equation(\ref{reimann_tensor_TT}) taking into account the TT gauge conditions we recall the result
 \bea
 :R^\mu _{00 \sigma }: 
 &=&
-\dfrac{1}{2} \qty(
-\partial_0 \partial_0 :h^{\T \mu} _{\sigma}: -
-\partial_0 \partial^\mu h^{\T}_{0 \sigma} -
-\partial_\sigma \partial_0 :h^{\T \,\mu} _{ 0}:  +
-\partial_\sigma \partial^\mu h_{0 0} ^{\T}
-)
-\\
-&=&
 \dfrac{1}{2} \partial_0 \partial_0 :h^{\T \mu} _{\sigma}: 
-\hspace{1.5cm} \text{using } h^{\T} _{\mu 0} =0 
 \eea 
-The above result tells us that the curvature of spacetime is proportional to the 'acceleration' of the gravitational wave. 
-Naively, the spacetime is more curved if the ripples of the GW are closer to each others.
-Considering the plane wave solution
-\[ 
- :R^\mu _{00 \sigma }: = -\dfrac{1}{2} \omega^2 :A^{\T \mu} _{\sigma}: \cos (\omega t)
-\]
-where $\omega$ is the frequency of the plane wave. 
-The curvature is proportional to the square of the frequency, in fact we expect a bigger curvature if the metric oscillates more times per second.
-Analogously, the electromagnetic field of an oscillating electric dipole is proportional to the square of the frequency, in fact we expect a bigger  field if the charge oscillates more times per second.
- \\
-In the lowest order approximation the particles are slowly moving, then we have $\tau = x^{0} = t$, so the geodesic deviation equation becomes
+In the lowest order approximation the free-falling particles are slowly moving, then we have $\tau = x^{0} = t$, so the geodesic deviation equation becomes
 \begin{equation}
 \pdv[2]{}{t} S^{\mu} = \dfrac{1}{2} S^{\sigma} \pdv[2]{}{t} :h^{\T \mu} _{\sigma}:
 \end{equation}
@@ -124,7 +107,6 @@ S^{2} = S^{2}(t=0) \qty(1 - \dfrac{1}{2} h_{+}) +  \dfrac{1}{2} h_{\times} S^{1}
 Let us study the effects of the two polarizations $h_{+}$ and $h_{\times}$ of a gravitational wave, which propagates through the center of a ring of free-falling test particles. 
 So, let us use consider a plane wave travelling along the z axis, and let us place a ring of free-falling test particles on the x-y plane  with its center in $(0,0,0)$. 
 The ring is initially parametrized by $(\cos \theta, \sin \theta)$ with $\theta \in (0,2\pi]$ and the separation vector $S^{\mu}$ measures the deformation of the ring from its center.\\
-
 \begin{figure}
 \centering
     \textbf{Time evolution of the $\mathlarger{\mathlarger{+}}$ polarization}\par\medskip
@@ -132,15 +114,13 @@ The ring is initially parametrized by $(\cos \theta, \sin \theta)$ with $\theta 
 \caption{Effect of the $h_+$ mode on a ring of free-falling test particles at $\omega t = n\pi/6 $ with $n=0,...,12$.}
 \label{plus_polarization}
 \end{figure}
-
 \begin{figure}
 \centering
-    \textbf{Time evolution of the $\mathlarger{\mathlarger{\times}}$ polarization.}\par\medskip
+\textbf{Time evolution of the $\mathlarger{\mathlarger{\times}}$ polarization.}\par\medskip
 \makebox[\textwidth][c]{\includegraphics[width=1.3\textwidth]{effects_gw/times_polarization.eps}}
 \caption{Effect of the $h_\times$ mode on a ring of free-falling test particles at $\omega t = n\pi/6 $ with $n=0,...,12$.}
 \label{times_polarization}
 \end{figure}
-
 Beginning with the case $h_{\times} =0$ and $h_{+} \neq 0$, the solutions of the geodesic deviation equation are
 \begin{eqnarray}
 \label{s1_+}
@@ -195,12 +175,13 @@ h_{R} = \dfrac{1}{\sqrt{2}} (h_{+} - i h_{\times})
 \label{l_polarized}
 h_{L} = \dfrac{1}{\sqrt{2}} (h_{+} + i h_{\times})
 \end{eqnarray}
-The effect of a pure $h_R$ wave would be to rotate the particles in a right-handed sense and similiarly for the left-handed mode $h_{L}$. It is important to stress that the particles do not travel around the ring, they just move in little epicycles.
+The effect of a pure $h_R$ wave would be to rotate the particles in a right-handed sense and similiarly for the left-handed mode $h_{L}$. It is important to stress that the particles do not travel around the ring, they just move in little epicycles.\\
 
 \begin{figure}
 \centering
     \textbf{ Right- and Left-handed cricularly polarized modes}\par\medskip
 \centering
+
 \subfloat[][Right-handed polarized gravitational wave.]
    {\includegraphics[width=.45\textwidth]{effects_gw/r_pol.eps}
    \label{plus_cont}} \quad
@@ -209,12 +190,9 @@ The effect of a pure $h_R$ wave would be to rotate the particles in a right-hand
    \label{times_cont}} \\
 \caption{Time evoluition of a ring of free-falling test particles on the x-y plane.}
 \label{plus_and_times}
+
 \end{figure}
 
-\subsection{The quadrupole nature of gravitational waves}
-Since the geodesic deviation cannot distinguish between a zero field and a uniform gravitational field, only a tidal gravitational field does the geodesic deviation accelerate. 
-
-Gravitational waves are variations in the curvature of spacetime
 
 
 
