--- a/latex_thesis/thesis.tex
+++ b/latex_thesis/thesis.tex
@@ -49,6 +49,10 @@ A really interesting and fascinating abstract
 \input{production_gw/prod_gw.tex}
 
 \clearpage
+\section{Numerical Evolution of Compact Binaries}
+\input{numerical_evolution/num_ev.tex}
+
+\clearpage
 \section{Conclusion}
 
 \clearpage
