--- a/latex_thesis/shared/custom_commands.tex
+++ b/latex_thesis/shared/custom_commands.tex
@@ -11,3 +11,5 @@
 \newcommand{\mpi}{\texttt{MPI} } 
 \newcommand{\de}{\nu}
 \newcommand{\T}{\text{TT}}
+\newcommand{\h}{\mathscr{H}}
+\newcommand{\ten}{\mathscr{T}}
