--- a/latex_thesis/shared/packages.tex
+++ b/latex_thesis/shared/packages.tex
@@ -20,7 +20,7 @@
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{subfig}
-
+\usepackage{mathrsfs}
 
 \usepackage{fancyhdr}
 \input{shared/package-config/fancyhdr}
