--- a/latex_thesis/introduction/intro.tex
+++ b/latex_thesis/introduction/intro.tex
@@ -1,1 +1,7 @@
 \textbf{NOTATION:} we use a system of geometrized units $G=c=1$.\\
+Greek letters for summing over all the indeces from 0 up to 3.
+Latin letters summing only on the spatial indeces 1 2 and 3.
+Sometimes we use boldface to denote the spatial vectors $\vb{x} =(x,y,z)$ and we rewrtie the four-vectors as 
+\[
+x^{\sigma} = (x^{0},x^{1}, x^{2},x^{3}) = (t,\vb{x}) = (t,x,y,z)
+\]
