--- a/latex_thesis/einstein_eq/einstein_eq_gw.tex
+++ b/latex_thesis/einstein_eq/einstein_eq_gw.tex
@@ -329,7 +329,7 @@ This means that we have suffecient freedom to fix the values of 8 components of 
 Note that $\bar{h} ^{\T} _{\mu \nu}= h^{\T} _{\mu \nu}$ from c).
 \\
 What does the TT gauge tell us about gravitational radiation ?\\
-Let use consider a test a particle at rest with four-velocity $u^{\alpha} = (1,0,0,0)$ in a nearly flat spacetime. If we orient our spatial coordinate axes so that the a plane gravitational wave is travelling in the positive z-direction $k^{\sigma} = (\omega, 0 ,0 ,\omega)$ the transverse traceless conditions becomes
+Let use consider a test a particle at rest with four-velocity $u^{\alpha} = (1,0,0,0)$ in a nearly flat spacetime. If we orient our spatial coordinate axes so that the a plane gravitational wave is travelling in the positive z-direction (equivalentely $x^{3}$ direction) $k^{\sigma} = (\omega, 0 ,0 ,\omega)$ the transverse traceless conditions becomes
 \[ \left.
 \begin{aligned}
 A^{\T}_{\mu 0} \, \omega + A ^{\T}_{\mu 3} \, \omega &= 0 \\
@@ -362,7 +362,7 @@ So, the plane wave solution in the TT gauge is:
 0 & 0 & 0 & 0 \\
 \end{bmatrix}
 \eeq
-where we express the real part of the solution with
+where we express the real part of the solution with $x^{0}=t$ and $x^{3}=z$ as follow
 \bea
 h_{+} = A^{\T} _{11} \cos \qty(\omega(t-z)) \\
 h_{\times} =  A^{\T} _{12} \cos \qty(\omega(t-z))
