introduction of the 5th section

--- a/latex_thesis/numerical_evolution/num_ev.tex
+++ b/latex_thesis/numerical_evolution/num_ev.tex
@@ -1,2 +1,10 @@
+
+In the linearized approximation, where gravitational fields are weak and velocities are nonrelativistic, we showed that it is straightforward to derive a relationship between the matter dynamics and the emission of gravitational waves, thus obtaining the quadrupole formula.
+However, the strongest gravitational-wave signals come from highly compact systems that evolve at relativistic speeds, where the linearized assumptions do not apply. 
+Therefore, gravitational-wave detectors find more likely an event which has a powreful signals.
+Thus, it is important to be able to calculate gravitational-wave emission accurately for processes such as black hole or neutron star inspiral and merger.
+Such problems cannot be solved analytically and instead are modeled by numerical relativity to compute the gravitational field near the source.\\
+In this section we study the gravitational-wave signals obtained from numerical simulations of compact binaries, using the Einstein Toolkit, an open-source computational infrastructure for numerical relativity based on Cactus Framework.
+Although we do not give a detailed explanation of the numerical methods used to solve the proposed simulations, we study the gravitational-wave signals and give an overview of different physical quantities which describe the binary sources.
 \subsection{Binary Black holes}
 \subsection{Binary Neutron stars}
